--- a/birds/static/styles.css
+++ b/birds/static/styles.css
@@ -1,3 +1,14 @@
+main {
+  padding-left: 0px;
+  margin: 0% 10%;
+}
+
+@media (max-width: 400px) {
+  main {
+    margin: 0% 5%;
+  }
+}
+
 @media (min-width: 401px) {
   .small {
     display: none;
@@ -53,69 +64,58 @@ div.tag-container div.row div.cell button.basic {
   height: 200px;
 }
 
-div.form-container {
-  padding-left: 0px;
-  margin: 0% 10%;
-}
-
-@media (max-width: 400px) {
-  div.form-container {
-    margin: 0% 5%;
-  }
-}
-
-div.form-container form div.container-part-1-2 {
+div.container-part-1-2 {
   float: left;
   width: 50%;
   padding-right: 2%;
 }
 
 @media (max-width: 800px) {
-  div.form-container form div.container-part-1-2 {
+  div.container-part-1-2 {
     width: 100%;
   }
 }
 
-div.form-container form div.form-group {
+div.form-group {
   display: table;
   margin-bottom: 15px;
 }
 
 @media (max-width: 800px) {
-  div.form-container form div.form-group {
+  div.form-group {
     margin-bottom: 5px;
   }
 }
 
 @media (max-width: 400px) {
-  div.form-container form div.form-group {
+  div.form-group {
     margin-bottom: 0px;
   }
 }
 
-div.form-container form div.form-group div.form-label {
+div.form-group div.form-label {
   display: table-cell;
   text-align: right;
 }
 
-div.form-container form div.form-group div.form-value {
+div.form-group div.form-value {
   display: table-cell;
   width: 100%;
   vertical-align: middle;
 }
 
-div.form-container form label {
+label {
   width: 100px;
   padding: 7px 13px;
   margin: 0;
   font-weight: 700;
 }
 
-div.form-container form div.value {
+div.value {
   padding: 7px 13px;
 }
 
-div.form-container form input {
+input {
   display: block;
   width: 100%;
   height: 34px;
@@ -124,41 +124,41 @@ div.form-container form input {
   border-radius: 5px;
 }
 
-div.form-container form button.select {
+button.select {
   border: 1px solid #ccc;
   padding: 6px 24px 6px 12px;
   background-color: white;
   position: relative;
 }
 
-div.form-container form button.select span.caret {
+button.select span.caret {
   position: absolute;
   right: 5px;
   top: 14px;
 }
 
-div.form-container form button.send {
+button.send {
   width: 100%;
 }
 
-div.form-container form div.help-text {
+div.help-text {
   color: grey;
   font-size: smaller;
   margin-top: 5px;
   margin-bottom: 5px;
 }
 
-div.form-container form ul {
+ul {
   padding: 0px;
   margin: 0px;
   list-style-type: none;
 }
 
-div.form-container form p.error-message {
+p.error-message {
   color: red;
 }
 
-div.form-container form button {
+button {
   border: 1px solid transparent;
   padding: 6px 12px;
   border-radius: 5px;
